force-app/main/default/objects/Integration_Queue__c/Integration_Queue__c.object-meta.xml
<CustomObject>
    <label>Integration Queue</label>
    <pluralLabel>Integration Queues</pluralLabel>
    <nameField>
        <displayFormat>QUE-{00000000}</displayFormat>
        <label>Queue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Retry and deferred processing queue for failed or pending integrations</description>
</CustomObject>