force-app/main/default/objects/Integration_Queue__c/fields/Next_Retry_At__c.field-meta.xml
<CustomField>
    <fullName>Next_Retry_At__c</fullName>
    <label>Next Retry At</label>
    <type>DateTime</type>
    <description>Scheduled retry time</description>
</CustomField>