force-app/main/default/objects/Integration_Queue__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <label>Payload</label>
    <type>LongTextArea</type>
    <length>131072</length>
    <description>Pre-built payload for retry</description>
</CustomField>