force-app/main/default/objects/Integration_Queue__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>5</defaultValue>
    <description>Processing priority (lower = higher priority)</description>
</CustomField>