force-app/main/default/objects/Integration_Queue__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <label>Record Id</label>
    <type>Text</type>
    <length>18</length>
    <required>true</required>
    <description>Source record Id</description>
</CustomField>